@@ -182,7 +182,6 @@ class Distro(object):
         if not info:
             return
         info = disk_info_re.match(info)
-        name = info.group('name')
         name = info.group('name').replace('-', ' ')
         version = info.group('version')
         subversion = info.group('subversion')
