@@ -34,6 +34,8 @@ wubi (9.10) UNRELEASED; urgency=low
     it's too big to use Wubi with.  This fixes using Wubi on
     sufficiently large USB disks.
   * Kubuntu Netbook Edition is now Kubuntu Netbook.
+  * Use i386 if an amd64 version of the selected distribution does not
+    exist.
 
  -- Evan Dandrea <evand@ubuntu.com>  Fri, 21 Aug 2009 11:01:39 +0100
 
